--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Emoji</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    
+    <h1>My first CSS drawing</h1>
+    <div id="face"></div>
+    <div id="eye-container">
+        <div id="left-eye"></div>
+        <div id="right-eye"></div>
+        </div>
+    <div id="mouth"></div>
+    </div>
 </body>
-</html>
+</html
+
